# Quick-Server

./: .gitignore  CMakeLists.txt  README.md  test  test.cpp
app/: main.cpp
app/include/: QuickServer.hpp
app/ui/storage/: README.md
demo/: file.csv  httpServer.sql  user.csv
fw/server/: global.cpp  global.hpp  server.cpp  server.hpp  server_in.cpp  server_in.hpp
src/: CMakeLists.txt  httpServer.hpp  main.cpp  setPermissions.sh  uninstall.sh
src/interface/: .gitignore  apology.html  changePassword.html  createAccount.html  index.html  login.html
src/interface/static/javascript/: addFileRequest.js  deleteFileRequest.js
src/interface/static/stylesheet/: index.css  login.css
src/server/: config.txt  declarations.cpp  declarations.hpp  global.cpp  global.hpp  serverUtils.cpp  serverUtils.hpp
src/server/database/: database.cpp  database.hpp
src/server/interface/: interface.cpp  interface.hpp
src/socket/: socketUtils.cpp  socketUtils.hpp
